# Game-of-Life

./: CMakeLists.txt  README.md
include/: Cell.hpp  Figures.hpp
src/: Cell.cpp  Figures.cpp  Main.cpp
